tester i mapper